--- a/app/views/mailer/account_information.text.erb
+++ b/app/views/mailer/account_information.text.erb
@@ -1,6 +1,10 @@
+<%= l(:mail_subject_register, Setting.app_title) %>
+
 <% if @user.auth_source %><%= l(:mail_body_account_information_external, @user.auth_source.name) %>
 <% else %><%= l(:mail_body_account_information) %>:
-* <%= l(:field_login) %>: <%= @user.login %>
+<%= l(:mail_body_account_information) %>:
 <% if @password %>* <%= l(:field_password) %>: <%= @password %><% end %>
 <% end %>
 <%= l(:label_login) %>: <%= @login_url %>
+
+<%= Setting.account_reg_info.to_s %>
